eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 058264248285.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:c07cbd5336f3a780855715865a7627ee2ac4a4be
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-server
